# proxy-tester

./: .eslintrc.json  .gitignore  LICENSE  PRO_MODE.md  README.md  next.config.ts  package-lock.json  package.json  test-pro-mode.js  test-session-debug.js  test-session-reuse.js
.github/workflows/: build.yml  dev-build.yml
scripts/: build-server.mjs  gen-latest.mjs  pkg-platform.mjs
server/: proModeServer.ts  server.ts
server/core/: pro-proxy-test.ts  simple-proxy-test.ts
server/requests/: proxy-tester.ts
server/utils/: createProxyAgent.ts  getFailureSuggestion.ts  getHttpErrorSuggestion.ts  ipLookup.ts  lowLevelProxyTester.ts  parseProxyError.ts  proModeServer.ts  testWithProtocol.ts
src/: types.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/components/: flag.tsx  header-socials.tsx  header.tsx  mode-toggle-switch.tsx  pro-mode-metrics.tsx  pro-mode-stats.tsx  pro-mode.tsx  proxy-configuration.tsx  proxy-list-row-promode.tsx  proxy-list-row.tsx  proxy-list.tsx  proxy-options.tsx  proxy-paste-box.tsx  proxy-toolbar.tsx  server-health-indicator.tsx  target-url-input.tsx  update-checker.tsx  update-dialog.tsx
src/components/load-proxies/: dropdown.tsx  import-tab.tsx  paste-tab.tsx  (+1 more)
src/hooks/: useApiUrl.ts  useAppVersion.ts  useCopyToClipboard.ts  useGlobalPasteProxies.ts  useProMode.ts  useSticky.ts  useUpdater.ts
src/lib/: pro-mode-tester.ts  utils.ts
src/store/: proxy.ts
src/styles/: globals.css
(+26 files in other folders)
